School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_declarations/decl_BoolAvecInt.deca
{
    boolean bool_int_true = 1;
    boolean bool_int_false = 0;
}